# AutoFocus

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
application/: CMakeLists.txt
application/inc/: CalibrationData.h  Camera.h  DepthSensor.h  FocusMotor.h  autofocus.h
application/src/: CalibrationData.cpp  Camera.cpp  DepthSensor.cpp  FocusMotor.cpp  autofocus.cpp  main_app.cpp
application/test/: CMakeLists.txt  CalibrationData_t.cpp  Camera_t.cpp  DepthSensor_t.cpp  FocusMotor_t.cpp  autofocus_t.cpp
autofocus/inc/: CalibrationData.h  Camera.h
autofocus/src/: CalibrationData.cpp  Camera.cpp
autofocus/test/: CalibrationData_t.cpp  Camera_t.cpp
components/: CMakeLists.txt
components/inc/: CalibrationData.h  Camera.h  DepthSensor.h
components/src/: CalibrationData.cpp  DepthSensor.cpp
components/test/: CalibrationData_t.cpp  DepthSensor_t.cpp
data/: calibration.csv
doc/: Restitution.pptx
main/: CMakeLists.txt  main_app.cpp
test/: CMakeLists.txt  autofocus_app.cpp  autofocus_integration_t.cpp
